RESOLVED FIXED279269
media-source-current-time.html tests and media-source-stalled-holds-sleep-assertion.html are crashing on WK1
https://bugs.webkit.org/show_bug.cgi?id=279269
Summary media-source-current-time.html tests and media-source-stalled-holds-sleep-ass...
Eric Carlson
Reported 2024-09-06 10:01:38 PDT
Both crash with: 1 0x1222040a4 WTF::assertIsCurrent(WTF::SerialFunctionDispatcher const&) 2 0x127996108 WebCore::MediaSourcePrivate::hasAudio() const 3 0x1222c14a8 WebCore::MediaPlayerPrivateMediaSourceAVFObjC::hasAudio() const 4 0x127990118 WebCore::MediaPlayer::hasAudio() const 5 0x1268c87a8 WebCore::HTMLMediaElement::hasAudio() const 6 0x1268d2e98 WebCore::HTMLMediaElement::canProduceAudio() const 7 0x1268d41d0 WebCore::HTMLMediaElement::virtualHasPendingActivity() const 8 0x12256a8fc WebCore::ActiveDOMObject::hasPendingActivity() const History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=media%2Fmedia-source%2Fmedia-source-stalled-holds-sleep-assertion.html&test=media%2Fmedia-source%2Fmedia-source-current-time.html
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-06 10:01:52 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-09-07 22:11:17 PDT
EWS
Comment 3 2024-09-08 01:13:59 PDT
Committed 283309@main (96a00f891524): <https://commits.webkit.org/283309@main> Reviewed commits have been landed. Closing PR #33286 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.