media-source-current-time.html tests and media-source-stalled-holds-sleep-assertion.html are crashing on WK1 https://bugs.webkit.org/show_bug.cgi?id=279269 rdar://135421843

Reviewed by Chris Dumez.

MediaSourcePrivate::hasAudio() can be called on the GC thread. When this
happens m_dispatcher (either main or worker thread) is suspended.

* Source/WebCore/platform/graphics/MediaSourcePrivate.cpp:
(WebCore::MediaSourcePrivate::hasAudio const):

Canonical link: https://commits.webkit.org/283309@main